Modifying the code for the cow data

--- a/configs/modelv2_test.yaml
+++ b/configs/modelv2_test.yaml
@@ -1,25 +1,21 @@
 data:
-  dataset_name: 'tmax.npy'
-  image_folder: ../data/
-  patch_size: 11
-  patch_stride: 8
+  root_dir: ./dataset/
   n_hr_views: 2
-  n_lr_views: 6
-  crop_sizes: [11, 8]
-  min_scales: [0.8, 0.2]
+  n_lr_views: 0
+  crop_sizes: 
+    - [208, 576]
+    - [208, 576]
+  min_scales: [1.0, 0.2]
   max_scales: [1.0, 0.5] 
-  low_info_thresh: null
-  adjust_scale: False
-  filter_data: False
 training:
   device: 'cuda'
   backbone_model: 'resnet18'  
   n_features_swav: 128
-  batch_size: 512
-  n_prototypes: 15
+  batch_size: 128
+  n_prototypes: 300
   learning_rate: 0.0001
   sinkhorn_epsilon: 0.03
-  max_patience: 2
-  min_epochs: 5
-  checkpoints_file_path: ../checkpoints/
+  max_patience: 3
+  min_epochs: 10
+  checkpoints_file_path: ./checkpoints/
   weights_file_name: null
