--- a/configs/modelv2_test.yaml
+++ b/configs/modelv2_test.yaml
@@ -1,5 +1,5 @@
 data:
-  root_dir: ./dataset/
+  root_dir: ./normalized_dataset/
   n_hr_views: 2
   n_lr_views: 0
   crop_sizes: 
@@ -12,10 +12,10 @@ training:
   backbone_model: 'resnet18'  
   n_features_swav: 128
   batch_size: 128
-  n_prototypes: 300
+  n_prototypes: 10
   learning_rate: 0.0001
   sinkhorn_epsilon: 0.03
-  max_patience: 3
-  min_epochs: 10
+  max_patience: 30
+  min_epochs: 700
   checkpoints_file_path: ./checkpoints/
-  weights_file_name: null
+  weights_file_name: epoch_158.pth
